--- a/templates/gt/info-unit.html
+++ b/templates/gt/info-unit.html
@@ -5,6 +5,10 @@
         <div class="false">Unidad Desconectada</div>
     </div>
     <div class="row">
+        <div>ID {=unitId}</div>
+        <div>{=device_name}</div>
+    </div>
+    <div class="row">
         <div>Fecha</div>
         <div>{=uDate}</div>
     </div>
