--- a/css/gt.css
+++ b/css/gt.css
@@ -849,12 +849,14 @@ form {
   content: "« ";
 }
 
-.now .info-comm .ev-209 ._type {
+.now .info-comm .ev-209 ._type,
+.now .info-comm .ev-211 ._type {
   color: #70c71f;
   font-weight: bold;
 }
 
-.now .info-comm .ev-209 ._type::after {
+.now .info-comm .ev-209 ._type::after,
+.now .info-comm .ev-211 ._type::after {
   content: " »";
 }
 
@@ -866,8 +868,8 @@ form {
   display: -ms-grid;
   display: grid;
   grid-gap: 0px;
-  -ms-grid-columns: 16px 60px 60px minmax(80px, 100px) 50px auto;
-      grid-template-columns: 16px 60px 60px minmax(80px, 100px) 50px auto;
+  -ms-grid-columns: 16px minmax(80px, 100px) 60px minmax(80px, 1fr) 50px auto;
+      grid-template-columns: 16px minmax(80px, 100px) 60px minmax(80px, 1fr) 50px auto;
   -ms-grid-rows: 1.4em auto;
       grid-template-rows: 1.4em auto;
   overflow: hidden;
