--- a/sass/gt.scss
+++ b/sass/gt.scss
@@ -896,6 +896,7 @@ form {
       text-align: center;
       font-size: 10pt;
       font-weight: bold;
+      visibility: hidden;
     }
     .btn-delete {
       color: #f0fa9a;
