--- a/css/gt_tool.css
+++ b/css/gt_tool.css
@@ -3,14 +3,20 @@
   overflow: auto;
   height: 100%;
 }
+
 .report-tool .sg-tab {
   height: 100%;
+  display: -ms-grid;
   display: grid;
   overflow: auto;
-  grid-template-rows: auto 1fr;
+  -ms-grid-rows: auto 1fr;
+      grid-template-rows: auto 1fr;
 }
+
 .report-tool .sg-tab > .menu {
+  -ms-grid-column: 1;
   grid-column: 1;
+  -ms-grid-row: 1;
   grid-row: 1;
   padding: 0px !important;
   height: 20px;
@@ -23,6 +29,7 @@
           flex-direction: row;
   border-bottom: 2px solid #056d64;
 }
+
 .report-tool .sg-tab > .menu > .tab-menu {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
@@ -48,14 +55,17 @@
   text-align: center;
   height: 100%;
 }
+
 .report-tool .sg-tab > .menu > .tab-menu.tab-active {
   background-color: #056d64;
   color: white;
 }
+
 .report-tool .sg-tab > .menu > .tab-menu:hover {
   background-color: #2ad8c9;
   color: white;
 }
+
 .report-tool .sg-tab > .body {
   margin: 0px;
   padding: 0px;
@@ -66,32 +76,43 @@
   display: flex;
   width: 100%;
 }
+
 .report-tool .sg-tab > .body > .tab-body {
   width: 100%;
   overflow: auto;
+  display: -ms-grid;
   display: grid;
-  grid-template-rows: auto 1fr;
+  -ms-grid-rows: auto 1fr;
+      grid-template-rows: auto 1fr;
 }
+
 .report-tool .sg-tab > .body > .tab-body:not(.tab-active) {
   display: none !important;
 }
+
 .report-tool .sg-tab > .body > .tab-body > :nth-child(2) {
   overflow: auto;
   height: 100%;
 }
+
 .report-tool .sg-tab .sg-form {
+  display: -ms-grid;
   display: grid;
   overflow: auto;
-  grid-template-rows: auto 1fr auto;
+  -ms-grid-rows: auto 1fr auto;
+      grid-template-rows: auto 1fr auto;
 }
+
 .report-tool .sg-tab .sg-form .page {
   overflow: auto;
   height: 100%;
 }
+
 .report-tool .sg-form {
   border: 0px;
   background-color: rgba(255, 255, 255, 0.664);
 }
+
 .report-tool .sg-form .caption {
   color: #929292;
   text-align: center;
@@ -101,29 +122,35 @@
   border-bottom: 2px solid #ececec;
   margin: 4px 0px 0px 0px;
 }
+
 .report-tool .sg-form .caption .text {
   text-transform: uppercase;
   font-family: futurab !important;
 }
+
 .report-tool .sg-form .page {
   grid-gap: 0px;
   padding: 0px;
-  grid-template-columns: repeat(auto-fit, [cc-start] minmax(180px, 1fr) [cc-end]);
+  -ms-grid-columns: ([cc-start] minmax(180px, 1fr) [cc-end])[auto-fit];
+      grid-template-columns: repeat(auto-fit, [cc-start] minmax(180px, 1fr) [cc-end]);
   -ms-flex-line-pack: start;
       align-content: start;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
 }
+
 .report-tool .sg-form .page .field {
   margin: 0px;
   padding: 0px;
   background-color: rgba(255, 255, 255, 0.8);
   padding-bottom: 8px;
 }
+
 .report-tool .sg-form .page .field .input {
   padding-left: 4px;
 }
+
 .report-tool .sg-form .page .field .label {
   color: #919191;
   text-transform: uppercase;
@@ -132,6 +159,7 @@
   padding-left: 10px;
   margin-bottom: 50px;
 }
+
 .report-tool .sg-form .page .field input,
 .report-tool .sg-form .page .field textarea,
 .report-tool .sg-form .page .field select,
@@ -145,9 +173,11 @@
   max-height: 1.8em;
   margin: 0px;
 }
+
 .report-tool .sg-form .page .field label {
   padding-left: 6px;
 }
+
 .report-tool .sg-form .sg-menu {
   padding: 0px;
   text-align: center;
@@ -159,23 +189,28 @@
       -ms-flex-direction: row;
           flex-direction: row;
 }
+
 .report-tool .sg-form .sg-menu > * {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
   line-height: 1.6em;
 }
+
 .report-tool .sg-form .sg-menu a {
   background-color: #096961;
   height: 100%;
   color: white;
 }
+
 .report-tool .sg-form .sg-menu a:active {
   background-color: #2f5a04;
 }
+
 .report-tool .sg-form .sg-menu a:hover {
   background-color: #005035;
 }
+
 .report-tool .sg-form .sg-menu .text {
   margin: 0px;
 }
@@ -183,31 +218,40 @@
 .report-tool div[data-mode="0"] .sg-form > .caption {
   background-color: aqua;
 }
+
 .report-tool div[data-mode="1"] .sg-form > .caption {
   background-color: aqua;
 }
+
 .report-tool div[data-mode="2"] .sg-form > .caption {
   background-color: aqua;
 }
+
 .report-tool div[data-mode="3"] .sg-form > .caption {
   background-color: aqua;
 }
+
 .report-tool option.mode-0 {
   color: #a76010 !important;
 }
+
 .report-tool option.mode-1 {
   color: #39b16f !important;
 }
+
 .report-tool option.mode-2 {
   color: red !important;
   font-weight: bold;
 }
+
 .report-tool option.mode-3 {
   color: #db48c3 !important;
 }
+
 .report-tool .sg-menu.type-M li:nth-child(2) {
   display: none !important;
 }
+
 .report-tool .sg-menu.type-W li:not(li:nth-child(2)) {
   display: none !important;
 }
@@ -216,12 +260,14 @@
   overflow: auto;
   height: 100%;
 }
+
 .gt-info-main .info-body {
   overflow: auto;
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
 }
+
 .gt-info-main .info-menu {
   background-color: white;
   color: #575757;
@@ -230,9 +276,11 @@
       -ms-flex: 0 0 auto;
           flex: 0 0 auto;
 }
+
 .gt-info-main .info-menu button {
   margin-left: 5px;
 }
+
 .gt-info-main .info-main {
   overflow: auto;
   height: 100%;
@@ -246,11 +294,14 @@
 }
 
 .sg-form {
+  display: -ms-grid;
   display: grid;
   height: 100%;
   overflow: auto;
-  grid-template-rows: auto 1fr auto;
+  -ms-grid-rows: auto 1fr auto;
+      grid-template-rows: auto 1fr auto;
 }
+
 .sg-form .page {
   height: 100%;
   overflow: auto;
@@ -263,6 +314,7 @@
   display: -ms-flexbox;
   display: flex;
 }
+
 .flex > .body > * {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
@@ -274,34 +326,44 @@
 .pending-tool {
   padding: 4px;
 }
+
 .pending-tool .row {
   font-size: 10px;
   color: #f4f7e0;
   background-color: #3a3a3aa9;
   padding: 1px;
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: minmax(50px, 100px) minmax(50px, 100px) 0px 1fr 1fr;
-  grid-template-rows: 1.4em auto;
+  -ms-grid-columns: minmax(50px, 100px) minmax(50px, 100px) 0px 1fr 1fr;
+      grid-template-columns: minmax(50px, 100px) minmax(50px, 100px) 0px 1fr 1fr;
+  -ms-grid-rows: 1.4em auto;
+      grid-template-rows: 1.4em auto;
   overflow: hidden;
 }
+
 .pending-tool .row:hover {
   background-color: rgba(104, 104, 104, 0.822);
   cursor: pointer;
 }
+
 .pending-tool .row .send {
   text-align: center;
 }
+
 .pending-tool .row .send:hover {
   background-color: rgba(29, 184, 15, 0.822);
   text-align: center;
 }
+
 .pending-tool .row .delete {
   text-align: center;
 }
+
 .pending-tool .row .delete:hover {
   background-color: rgba(206, 0, 0, 0.822);
   cursor: pointer;
 }
+
 .pending-tool .row div {
   white-space: nowrap;
   overflow: hidden;
@@ -310,9 +372,12 @@
 }
 
 .output-tool {
+  display: -ms-grid;
   display: grid;
-  grid-template-rows: auto 1fr;
+  -ms-grid-rows: auto 1fr;
+      grid-template-rows: auto 1fr;
 }
+
 .output-tool > :nth-child(2) {
   overflow: auto;
   height: 100%;
