--- a/sass/gt_tool.scss
+++ b/sass/gt_tool.scss
@@ -383,3 +383,44 @@
     height: 100%;
   }
 }
+
+.info-main {
+  .info-menu {
+    * {
+      font-size: 10px;
+    }
+
+    button {
+      background-color: rgb(219, 219, 219);
+      border: 1px solid rgb(114, 114, 114);
+      margin: 2px;
+      line-height: 1.5em;
+      vertical-align: middle;
+      width: 2.3em;
+      &:hover {
+        background-color: rgb(0, 59, 10);
+        color: white;
+        cursor: pointer;
+      }
+    }
+  }
+
+  .pending-note {
+    background-color: #b40bdf;
+    border-radius: 20%;
+    padding: 1px;
+    //vertical-align: super;
+    position: absolute;
+    transform: translate(5px, -160%);
+    color: #eeeeee;
+    font-weight: bold;
+    //display: none;
+    //right: 0px;
+    min-width: 12px;
+    text-align: center;
+    font-size: 10px;
+    &:empty {
+      display: none;
+    }
+  }
+}
