--- a/sass/gt_tool.scss
+++ b/sass/gt_tool.scss
@@ -424,3 +424,12 @@
     }
   }
 }
+
+.event-grid {
+  background-color: rgb(236, 236, 236);
+  color: #4d4d4d;
+  td {
+    font-size: 11px;
+    text-transform: uppercase;
+  }
+}
