--- a/sass/sg_calendar.scss
+++ b/sass/sg_calendar.scss
@@ -1,226 +1,210 @@
-.sg-calendar{
+.sg-calendar {
+  user-select: none;
+  background-color: white;
+  color: #686869;
+  width: 100%;
+  min-width: 280px;
+  //max-width : 320px;
+  height: 100%;
 
-	user-select: none;
-	background-color: white;
-	color: #686869;
-	width: 100%;
-	min-width: 280px;
-	//max-width : 320px;
-	height: 100%;
-	
-	font-family: tahoma;
-	
-	display: flex;
-	flex-direction: column;
-	>*{
-	  flex: 1 1 auto;
-	 
-	  
-	}
-	.y-bar{
-	  display: flex;
-	  >*{
-		background-color: rgb(230, 230, 230);
-		margin: 1px;
-		flex:1 1 auto;
-		border: 1px solid #f4f4f4;
-		
-		text-align: center;
-		font-size: 8pt;
-		line-height: 2em;
-		cursor: pointer;
-		&[data-index="2"]{
-		  color:rgb(236, 236, 236);
-		  background-color: #858585;
-		  font-weight: bold;
-		}
-	  }
-	  >*:hover{
-		background-color: #0070a0;
-		color: white;
-	  }
-	}  
-	.m-bar{
-	  display: flex;
-	  >*{
-		flex:1 1 auto;
-		background-color: rgb(235, 235, 235);
-		display: inline-block;
-		
-		margin: 1px;
-		//width: 100%;
-		text-align: center;
-		font-size: 8pt;
-		line-height: 2em;
-		transition: 0.5s all ease-out;
-		cursor: pointer; 
-		
-		&.active{
-		  color:rgb(226, 226, 226);
-		  background-color: #0070a0;
-		}
-	  }
-	  >*:hover{
-		background-color: #a00000;
-		color: white;
-	  }
-  
-	}
-  
-	.c-bar{
-	  display: flex;
-	  justify-content: flex-start;
-	  //justify-items: center;
-	   align-items: center;
-	  //padding: 4px;
-	  vertical-align: middle;
-	  //height: 30px;
-	  *{
-		font-size: 9pt;
-		text-align: center;
-		
-		
-	  }
-	  >*{
-		flex: 1 1 auto;
-	   // border: 1px solid red;
-		line-height: 1.5em;
-		background-color: #d6d6d6;
-		padding: 4px;
-		color: rgb(110, 110, 110);
-		
-		&:HOVER{
-		  background-color: #747474;
-		  color:white;
-		  
-		}
-		.p-month:hover, .n-month:hover, .p-year:hover, .n-year:hover{
-		  color:rgb(168, 238, 238);
-		}
-	  }
-	  .c-month{
-		display: flex;
-		>*{
-		  flex: 1 1 auto;
-		}
-		select{
-		  width: 80px;
-		  flex: 0 0 auto !important;
-		}
-	  }
-	  .c-year{
-		display: flex;
-		
-		>*{
-		  flex: 1 1 auto;
-		}
-	  }
-	}
-	>.calendar{
-	  
-	  width: 100%;
-	  height:180px;
-	  thead{
-		background-color: darkgray;
-		color:#ededed;
-		text-align: center;
-		font-weight: bold;
-	  }
-	  tbody{
-		background-color: #ededed;
-		font-size: 9pt;
-		//width: 100%;
-		//height: 100%;
-		td{
-		  text-align: center;
-		  
-		 // height: 20px;
-		  font-size: 8pt;
-		}
-	
-		.week{
-		  background-color: #e5e5e5;
-		  &:hover{
-			background-color: rgb(173, 5, 5);
-			color:white;
-		  }
-		}
-		.day:hover{
-		  background-color: black;
-		  color:aqua;
-		}
-  
-		.m-prev{
-		  background-color: white;
-		}
-		.m-next{
-		  background-color: white;
-		}
-		.today{
-		  color:rgb(226, 226, 226);
-		  background-color: #0070a0;
-		  
-		}
-		.m-now.active{
-		  color: white;
-		  background-color: #f3a600;
-		}
-		.m-prev.active{
-		  color: white;
-		  background-color: #db4e0d;
-		}
-		.m-next.active{
-		  color: white;
-		  background-color: #ff8800;
-		}
-	  }
-	}
-  
-	
-	
-  
-	
-  
-	
-	
-  
-	.t-bar{
-	  font-size: 10pt;
-	  padding: 4px;
-	  text-align: center;
-	  margin: 1px;
-	  cursor: pointer;
-	  color: #686868;
-	  background-color: #dbdbdb;
-	  
-	  &:hover{
-		background-color:#1986d4;
-		color:white;
-	  }
-  
-	}
+  font-family: tahoma;
+
+  display: flex;
+  flex-direction: column;
+  > * {
+    flex: 1 1 auto;
   }
-  
-  .sgcal-note{
-	border-style: solid;
-	border-width: 10px 0 10px 10px;
-	right: 0px;
-	top:0px;
-	border-color: rgba(192,21,21,1.00) transparent transparent transparent;
-	
-	&:hover{
-	  border-color: black transparent transparent transparent!important;
-	}
+  .y-bar {
+    display: flex;
+    > * {
+      background-color: rgb(230, 230, 230);
+      margin: 1px;
+      flex: 1 1 auto;
+      border: 1px solid #f4f4f4;
+
+      text-align: center;
+      font-size: 8pt;
+      line-height: 2em;
+      cursor: pointer;
+      &[data-index="2"] {
+        color: rgb(236, 236, 236);
+        background-color: #858585;
+        font-weight: bold;
+      }
+    }
+    > *:hover {
+      background-color: #0070a0;
+      color: white;
+    }
   }
-  
-  
-  .sgcal-ind{
-	border-style: solid;
-	border-width: 10px 10px 10px 0;
-	border-color: rgba(13,94,191,1.00) transparent transparent transparent;
-	left: 0px;
-	top:0px;
-	&:hover{
-	  border-color: black transparent transparent transparent!important;
-	}
+  .m-bar {
+    display: flex;
+    > * {
+      flex: 1 1 auto;
+      background-color: rgb(235, 235, 235);
+      display: inline-block;
+
+      margin: 1px;
+      //width: 100%;
+      text-align: center;
+      font-size: 8pt;
+      line-height: 2em;
+      transition: 0.5s all ease-out;
+      cursor: pointer;
+
+      &.active {
+        color: rgb(226, 226, 226);
+        background-color: #0070a0;
+      }
+    }
+    > *:hover {
+      background-color: #a00000;
+      color: white;
+    }
   }
+
+  .c-bar {
+    display: flex;
+    justify-content: flex-start;
+    //justify-items: center;
+    align-items: center;
+    //padding: 4px;
+    vertical-align: middle;
+    //height: 30px;
+    * {
+      font-size: 9pt;
+      text-align: center;
+    }
+    > * {
+      flex: 1 1 auto;
+      // border: 1px solid red;
+      line-height: 1.5em;
+      background-color: #d6d6d6;
+      padding: 4px;
+      color: rgb(110, 110, 110);
+
+      &:hover {
+        background-color: #747474;
+        color: white;
+      }
+      .p-month:hover,
+      .n-month:hover,
+      .p-year:hover,
+      .n-year:hover {
+        color: rgb(168, 238, 238);
+      }
+    }
+    .c-month {
+      display: flex;
+      > * {
+        flex: 1 1 auto;
+      }
+      select {
+        width: 80px;
+        flex: 0 0 auto !important;
+      }
+    }
+    .c-year {
+      display: flex;
+
+      > * {
+        flex: 1 1 auto;
+      }
+    }
+  }
+  > .calendar {
+    width: 100%;
+    height: 180px;
+    thead {
+      background-color: darkgray;
+      color: #ededed;
+      text-align: center;
+      font-weight: bold;
+    }
+    tbody {
+      background-color: #ededed;
+      font-size: 9pt;
+      //width: 100%;
+      //height: 100%;
+      td {
+        text-align: center;
+
+        // height: 20px;
+        font-size: 8pt;
+      }
+
+      .week {
+        background-color: #e5e5e5;
+        &:hover {
+          background-color: rgb(173, 5, 5);
+          color: white;
+        }
+      }
+      .day:hover {
+        background-color: black;
+        color: aqua;
+      }
+
+      .m-prev {
+        background-color: white;
+      }
+      .m-next {
+        background-color: white;
+      }
+      .today {
+        color: rgb(226, 226, 226);
+        background-color: #0070a0;
+      }
+      .m-now.active {
+        color: white;
+        background-color: #f3a600;
+      }
+      .m-prev.active {
+        color: white;
+        background-color: #db4e0d;
+      }
+      .m-next.active {
+        color: white;
+        background-color: #ff8800;
+      }
+    }
+  }
+
+  .t-bar {
+    font-size: 10pt;
+    padding: 4px;
+    text-align: center;
+    margin: 1px;
+    cursor: pointer;
+    color: #686868;
+    background-color: #dbdbdb;
+
+    &:hover {
+      background-color: #1986d4;
+      color: white;
+    }
+  }
+}
+
+.sgcal-note {
+  border-style: solid;
+  border-width: 10px 0 10px 10px;
+  right: 0px;
+  top: 0px;
+  border-color: rgba(192, 21, 21, 1) transparent transparent transparent;
+
+  &:hover {
+    border-color: black transparent transparent transparent !important;
+  }
+}
+
+.sgcal-ind {
+  border-style: solid;
+  border-width: 10px 10px 10px 0;
+  border-color: rgba(13, 94, 191, 1) transparent transparent transparent;
+  left: 0px;
+  top: 0px;
+  &:hover {
+    border-color: black transparent transparent transparent !important;
+  }
+}
