--- a/css/gt_tool.css
+++ b/css/gt_tool.css
@@ -440,4 +440,14 @@
 .info-main .pending-note:empty {
   display: none;
 }
+
+.event-grid {
+  background-color: #ececec;
+  color: #4d4d4d;
+}
+
+.event-grid td {
+  font-size: 11px;
+  text-transform: uppercase;
+}
 /*# sourceMappingURL=gt_tool.css.map */
