--- a/templates/gt/info-unit-popup.html
+++ b/templates/gt/info-unit-popup.html
@@ -1,5 +1,26 @@
 <div class="info-form-main">
     <div class="name">{=vehicle_name}</div>
+
+    <div class="row">
+        <div>Marca</div>
+        <div>{=brand}</div>
+    </div>
+
+    <div class="row">
+        <div>Modelo</div>
+        <div>{=model}</div>
+    </div>
+
+    <div class="row">
+        <div>Color</div>
+        <div>{=color}</div>
+    </div>
+
+    <div class="row">
+        <div>Matrícula</div>
+        <div>{=plate}</div>
+    </div>
+
     <div class="row">
         <div>Fecha</div>
         <div>{=uDate}</div>
